--- a/wave-grid/src/App.css
+++ b/wave-grid/src/App.css
@@ -2,4 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: "Open Sans", serif;
+    width: 100%;
+    height: 100vh;
+    background-color: #1f6585;
+}
+
+.App h1{
+    color: white;
+    margin-top: 50px;
 }
