--- a/wave-grid/src/App.css
+++ b/wave-grid/src/App.css
@@ -3,12 +3,13 @@
     flex-direction: column;
     align-items: center;
     font-family: "Open Sans", serif;
-    width: 100%;
-    height: 100vh;
+    /* width: 100%; */
+    min-height: 100vh;
     background-color: #1f6585;
 }
 
 .App h1{
+    text-align: center;
     color: white;
     margin-top: 50px;
 }
